<resources>
  <string name="app_name">Service Desk</string>
  <string name="error_title">Упс...</string>


  <string name="is_no_email">Не является адресом электронной почты</string>
  <string name="is_require">Обязательное поле</string>
  <string name="short_error">Минимальная длина не достигнута</string>
  <string name="invalid_email_password">Неверный почта или пароль</string>
  <string name="user_collision">Почта занята</string>
  <string name="network_error">Проблемы с интернетом</string>
  <string name="unknown_error">Неизвестная ошибка</string>
  <string name="weak_password">Слабый пароль</string>
  <string name="data_copied">Данные скопированы!</string>
  <string name="continue_text">Продолжить</string>
  <string name="analitic_added_hint">Вы больше не сможете увидеть авторизационные данные - сохраните их. Нажмите на них, чтобы скопировать в буфер обмена</string>
  <string name="error">Упс...</string>
  <string name="app_description">Решение независимо от вашей проблемы</string>
  <string name="welcome_text">Для использования сервиса необходимо авторизоваться или зарегистрироваться</string>
  <string name="auth">Авторизоваться</string>
  <string name="registration">Зарегистрироваться</string>
  <string name="email">Электронная почта</string>
  <string name="password">Пароль</string>
  <string name="registration_title">Регистрация</string>
  <string name="firstName">Имя</string>
  <string name="lastName">Фамилия</string>
  <string name="phoneNumber">Номер телефона</string>
  <string name="division">Подразделение</string>
  <string name="auth_title">Авторизация</string>
  <string name="exit_title">Выход</string>
  <string name="exit_message">Вы уверены что хотите выйти из аккаунта?</string>
  <string name="cancel">Отменить</string>
  <string name="registation_admin">Регистрация администратора</string>
  <string name="registration_editor_description">Для регистрации администратора заполните форму</string>

  <string name="add_division">Добавление подразделения</string>
  <string name="add_division_description">Для добавления подразделения заполните форму</string>

  <string name="registation_engineer">Регистрация инженера</string>
  <string name="registration_engineer_description">Для регистрации инженера заполните форму</string>
  <string name="user_added_hint">Вы больше не сможете увидеть авторизационные данные - сохраните их. Нажмите на них, чтобы скопировать в буфер обмена</string>
  <string name="admin_auth_data">Новый администратор зарегистрирован!\n\nАвторизационные данные:\nПочта: %1$s\nПароль: %2$s</string>
  <string name="admin_added">Администратор зарегистрирован</string>

  <string name="engineer_auth_data">Новый инженер зарегистрирован!\n\nАвторизационные данные:\nПочта: %1$s\nПароль: %2$s</string>
  <string name="engineer_added">Инженер зарегистрирован</string>

  <string name="logs_title">Журнал событий</string>
  <string name="admins_title">Администрация</string>
  <string name="profile">Профиль</string>
  <string name="search">Поиск</string>
  <string name="list_empty">Список пуст</string>
  <string name="await_loading">Дождитесь окончания загрузки</string>
  <string name="block">Заблокировать</string>

  <string name="block_admin_title">Блокировка администратора</string>
  <string name="block_admin_message">Вы уверены что хотите заблокировать администратора \"%1$s\"?</string>

  <string name="block_engineer_title">Блокировка инженера</string>
  <string name="block_engineer_message">Вы уверены что хотите заблокировать инженера \"%1$s\"?</string>
  <string name="delete_division_message">Вы уверены что хотите удалить подразделение \"%1$s\"?</string>
  <string name="user_was_blocked">Пользователь был заблокирован</string>
  <string name="account_have_been_blocked">Аккаунт заблокирован</string>
  <string name="account_have_been_blocked_message_with_exit">Ваш аккаунт был заблокирован! Чтобы выйти из аккаунта нажмите на кнопку ниже</string>
  <string name="account_have_been_blocked_message">Ваш аккаунт был заблокирован!</string>
  <string name="analytics_title">Инженеры</string>
  <string name="add_engineer_division_error">Добавьте перечень подразделений за которые инженер будет нести ответственность</string>
  <string name="change_divisions">Редактировать перечень подразделений</string>
  <string name="edit_divisions_engineer">Редактирование перечня подразделений инженера</string>
  <string name="delete_division_title">Удаление подразделения</string>
  <string name="no_uniq_division">Подразделение с таким именем уже существует</string>
  <string name="name">Название</string>
  <string name="divisions_title">Подразделения</string>
  <string name="delete">Удалить</string>
  <string name="no_division">Подразделение не установлено</string>
  <string name="change_division">Изменение подразделения</string>
  <string name="accidents">Происшествия</string>
  <string name="say_about_incident">Сообщить об инциденте</string>
  <string name="about_incident">Сообщение об инциденте</string>
  <string name="add_request">Добавить запрос</string>
  <string name="adding_request">Добавление запрос</string>
  <string name="subject">Тема</string>
  <string name="massage">Сообщение</string>
  <string name="urgency">Срочность</string>
  <string name="category">Категория</string>
  <string name="accidents_in_work">Назначенные</string>
  <string name="request">Запрос</string>
  <string name="loading">Загрузка…</string>
  <string name="incident">Инцидент</string>
  <string name="attached_images_title">Прикрепленные изображения</string>
  <string name="logs">Журнал событий</string>
  <string name="pick_up_photo">Прикрепить фото</string>
  <string name="role">Роль: %1$s</string>
    <string name="accept_close_accident">Подвердить разрешение</string>
  <string name="deny_close_accident">Опровергнуть разрешение</string>
  <string name="add_information">Добавить информацию</string>
  <string name="accept_accident_to_work">Принять в работу</string>
  <string name="close_accident">Закрыть заявку</string>
  <string name="excalation">Эскалация</string>
  <string name="excalation_hint">Опишите причину по которой происшествие необходимо передать другому инженеру</string>
    <string name="accident_was_accdepted_to_work">Принято в работу</string>
    <string name="wait_more_information">Запросить дополнительную информацию</string>
    <string name="accident_was_close">Заявка закрыта! Ожидается подтверждение от пользователя.</string>
  <string name="accident_was_close_by_user">Закрытие завяки подтвержденно</string>
    <string name="user_add_more_information_title">Добавление дополнительной информации</string>
  <string name="engineer_add_more_information_title">Добавление запроса на добавление дополнительной информации</string>
  <string name="user_add_more_information_hint">Опишите более подробно возникшую проблему, что уже было предпринято, к чему это привело и другую информацию</string>
    <string name="engineer_add_more_information_hint">Опишите требуемую информацию от пользователя</string>
    <string name="message">Сообщение</string>
  <string name="request_to_add_more_information_added">Запрос отправлен</string>
  <string name="more_information_added">Доп. информация добавлена</string>
    <string name="advance_info">Дополнительная информация</string>
  <string name="request_to_excalation_sent">Заявка на экскалацию отправлена.</string>
  <string name="current_engineer">Текущий инженер</string>
  <string name="one_engineer">Нет подходящих инженеров</string>
  <string name="change_engineer">Заменить инженера</string>
  <string name="changing_engineer">Замена инженера</string>
  <string name="engineer">Инженер</string>
  <string name="engineer_has_blocked">Инженер был заблокирован</string>
    <string name="requests">Запросы</string>
  <string name="missedTimer">С превышеным временем</string>
  <string name="avg_time_title">Среднее время разрешения инцидентов: %1$s (всего инцидентов разрешено: %2$d)</string>
</resources>