<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
        name="master"
        type="com.elka.servicedesk.view.dialog.AddDivisionDialog" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="25dp">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


      <TextView
          style="@style/text.h3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:gravity="start"
          android:text="@string/add_division"
          android:textStyle="bold" />

      <TextView
          style="@style/text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/add_division_description" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutDivisionName"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:hint="@string/name"
          app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/divisionName"
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="25dp"
          android:gravity="end"
          android:orientation="horizontal">

        <TextView
            style="@style/text.bold.button"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bubble_wrapper"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> master.disagree()}"
            android:text="@string/cancel" />

        <TextView
            style="@style/text.bold.button"
            android:layout_width="wrap_content"
            android:background="@drawable/bubble_wrapper"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> master.agree()}"
            android:text="@string/continue_text" />
      </LinearLayout>
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>