<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
        name="master"
        type="com.elka.servicedesk.view.ui.registrationScreen.RegistrationFragment" />

    <variable
        name="viewModel"
        type="com.elka.servicedesk.viewModel.RegistrationViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/icon_back_size"
        android:layout_height="@dimen/icon_back_size"
        android:layout_marginStart="@dimen/app_padding"
        android:layout_marginTop="@dimen/app_padding"
        android:onClick="@{() -> master.goBack()}"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_padding"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


      <ImageView
          android:id="@+id/image_logo"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:src="@drawable/ic_logo"
          tools:ignore="ContentDescription" />

      <TextView
          style="@style/text.h2.bold"
          android:layout_width="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/registration_title" />

      <!--            android:text="@={addExerciseViewModel.name}"-->

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutFirstName"
          style="@style/FieldWrapper"

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:hint="@string/firstName">

        <com.google.android.material.textfield.TextInputEditText
            android:text="@={viewModel.firstName}"
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutLastName"
          style="@style/FieldWrapper"

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/lastName">

        <com.google.android.material.textfield.TextInputEditText
            android:text="@={viewModel.lastName}"
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/divisionW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/field_wrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

          <Spinner
              android:id="@+id/division_spinner"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:spinnerMode="dropdown"
              tools:listitem="@layout/spinner_division_item" />
        </RelativeLayout>

        <TextView
            style="@style/text.hint.field"
            android:text="@string/division"
            app:layout_constraintBottom_toTopOf="@id/divisionW"
            app:layout_constraintStart_toStartOf="@id/divisionW"
            app:layout_constraintTop_toTopOf="@id/divisionW" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
          android:id="@+id/errorDivision"
          style="@style/text.attention"
          android:layout_marginTop="5dp"
          tools:text="@string/is_require"
          />


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutEmail"
          style="@style/FieldWrapper"

          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:text="@={viewModel.email}"
            style="@style/FieldContent"
            android:autofillHints="emailAddress"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutPhoneNumber"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:text="@={viewModel.phoneNumber}"
            style="@style/FieldContent"
            android:autofillHints="phone"
            android:imeOptions="actionNext"
            android:inputType="phone|number"
            android:lines="1"
            android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutPassword"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          app:passwordToggleEnabled="true"
          android:layout_height="wrap_content"
          android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:text="@={viewModel.password}"
            style="@style/FieldContent"
            android:autofillHints="password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/button_auth"
          style="@style/button"
          android:onClick="@{() -> master.tryRegistration()}"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@color/accent"
          android:backgroundTint="@null"
          android:text="@string/registration"
          android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_padding"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>